User login and logout with localStorage

--- a/src/components/UI/button.css
+++ b/src/components/UI/button.css
@@ -25,3 +25,12 @@
 .button.alternative:active {
   background-color: #ddb3f8;
 }
+
+.button:disabled,
+.button:disabled:hover,
+.button:disabled:active {
+  background: #ccc;
+  color: #292929;
+  border-color: #ccc;
+  cursor: not-allowed;
+}
